feat: get contributors of a project
