# doc/api.yml
@@ -323,14 +323,7 @@ paths:
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  project:
-                    $ref: '#/components/schemas/Project'
-                  contributors:
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/Contributors'
+                $ref: '#/components/schemas/ProjectContributors'
         500:
           $ref: "#/components/responses/500"
         404:
@@ -681,7 +674,7 @@ components:
         creationDatetime:
           type: string
           format: date-time
-    Contributors:
+    Contributor:
       type: object
       properties:
         first_name:
@@ -689,4 +682,14 @@ components:
         last_name:
           type: string
         donation_amount:
-          type: string
+          type: integer
+          format: int32
+    ProjectContributors:
+      type: object
+      properties:
+        project:
+          $ref: '#/components/schemas/Project'
+        contributors:
+          type: array
+          items:
+            $ref: '#/components/schemas/Contributor'
